--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start-server": "json-server --watch server/data.json --port 1919"
+    "start-serve": "json-server --watch server/data.json --port 1919"
   },
   "private": true,
   "dependencies": {
